This commit finished the team slide

--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -1,3 +1,20 @@
-<p>
-  team works!
-</p>
+<div class="main">
+  <div class="section">
+    <div class="container title-container">
+      <div class="col-sm-12">
+        <h2>Our Expert Team</h2>
+      </div>
+        <br>
+          <div class="col-sm-8">
+            <p>We are a team of expert designers and developers. We build top-notch web and mobile applications. We enable
+              clients in
+              5 countries to create and execute strategies for their digital transformation. From engineering to application
+              development, knowledge management and business process management, we help our clients find the right problems to
+              solve, and to solve these effectively.</p>
+          </div>
+          <div class="col-sm-4">
+            <a href="#"><img class="image-responsive" src="https://www.nextontop.com/assets/img/home/nextontop.svg" height="275" width="275"  alt=""></a>
+          </div>
+    </div>
+  </div>
+</div>
