--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse">
+<!-- <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="/home"> <img src="https://www.nextontop.com/assets/paper_img/logo.png" height="42" width="48" alt="Image of NextOnTop logo">NextOnTop</a>
@@ -13,4 +13,4 @@
       <li> <button class="btn btn-warning navbar-btn">HIRE US</button> </li>
     </ul>
   </div>
-</nav>
+</nav> -->
