This commit adds completed home slide, nav bar must be installed

--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -13,7 +13,7 @@
               solve, and to solve these effectively.</p>
           </div>
           <div class="col-sm-4">
-            <a href="#"><img class="image-responsive" src="https://www.nextontop.com/assets/img/home/nextontop.svg" height="275" width="275"  alt=""></a>
+            <a href="#"><img id="hp"class="image-responsive" src="https://www.nextontop.com/assets/img/home/nextontop.svg" align="middle" height="275" width="275"  alt=""></a>
           </div>
     </div>
   </div>
