--- a/src/app/home-slide/home-slide.component.html
+++ b/src/app/home-slide/home-slide.component.html
@@ -1,3 +1,8 @@
-<p>
-  home-slide works!
-</p>
+<div class="demo-header demo-header-image">
+    <div class="motto">
+      <h1 class="title-uppercase">Developing world's best products</h1>
+      <h3> We build your dream app that is awesome on every device</h3>
+      <a class="btn btn-info btn-fill" >Get A Quote</a>
+    </div>
+    <br>
+  </div>
