--- a/src/app/team/team.component.css
+++ b/src/app/team/team.component.css
@@ -29,6 +29,23 @@ div {
 
 img {
     vertical-align: middle;
+    border-top-color: initial;
+    border-top-style: initial;
+    border-top-width: 0px;
+    border-right-color: initial;
+    border-right-style: initial;
+    border-right-width: 0px;
+    border-bottom-color: initial;
+    border-bottom-style: initial;
+    border-bottom-width: 0px;
+    border-left-color: initial;
+    border-left-style: initial;
+    border-left-width: 0px;
+    border-image-source: initial;
+    border-image-slice: initial;
+    border-image-width: initial;
+    border-image-outset: initial;
+    border-image-repeat: initial;
 }
 
 h2 {
@@ -48,5 +65,7 @@ h2 {
     padding-left: 15px;
     font-family: 'Montserrat', "Helvetica", Arial, sans-serif;
 }
+
+
 
 
