This commit puts the header logo in place

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<header>
+<div class="wrapper">
   <app-nav-bar></app-nav-bar>
   <app-home-slide></app-home-slide>
   <app-team></app-team>
+</div>
   
-</header>
