--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,16 +1,16 @@
-<!-- <nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/home"> <img src="https://www.nextontop.com/assets/paper_img/logo.png" height="42" width="48" alt="Image of NextOnTop logo">NextOnTop</a>
+      <a class="navbar-brand" href="/home"> <img src="https://www.nextontop.com/assets/paper_img/logo.png" height="42" width="48" alt="Image of NextOnTop logo"><h3>NextOnTop</h3></a>
     </div>
 
-    <ul style="list-style: none" class="nav navbar-nav navbar-right">
+    <!-- <ul style="list-style: none" class="nav navbar-nav navbar-right">
       <li><a href="#/services"> Services</a></li>
       <li><a href="#/products"> Products</a></li>
       <li><a href="#/portfolio"> Portfolio</a></li>
       <li><a href="#/process"> Process</a></li>
       <li><a href="#/blogs"> Blogs</a></li>
       <li> <button class="btn btn-warning navbar-btn">HIRE US</button> </li>
-    </ul>
+    </ul> -->
   </div>
-</nav> -->
+</nav>
