--- a/src/app/home-slide/home-slide.component.css
+++ b/src/app/home-slide/home-slide.component.css
@@ -14,7 +14,7 @@ h1 {
     color: white;
     line-height: 1.1;
     font-size: 4.5em;
-    font-weight: normal;
+    font-weight: 400;
     margin-top: 30px;
     margin-right: 0px;
     margin-bottom: 15px;
