--- a/src/app/home-slide/home-slide.component.css
+++ b/src/app/home-slide/home-slide.component.css
@@ -23,16 +23,17 @@ h1 {
 }
 h1 {
     display: block;
-    margin-block-start: 0.67em;
-    margin-block-end: 0.67em;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
-    padding-top: 200px
+    padding-top: 100px
 }
 
 h3 {
+    margin-top: 35px;
     color: white;
-    padding-bottom: 20px;
+    /* padding-bottom: 20px; */
     font-family: 'Montserrat', "Helvetica", Arial, sans-serif;
 }
 
@@ -45,7 +46,8 @@ h3 {
 .btn {
     display: inline-block;
     vertical-align: middle;
-    margin-bottom: 0;
+    margin-top: 50px;
+    margin-bottom: 100px;
     line-height: 1.5;
     text-align: center;
     vertical-align: middle;
@@ -63,4 +65,8 @@ h3 {
     padding-right: 18px;
     padding-bottom: 7px;
     padding-left: 18px;
+}
+
+* {
+    box-sizing: border-box;
 }
