--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,16 +1,37 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/home"> <img src="https://www.nextontop.com/assets/paper_img/logo.png" height="42" width="48" alt="Image of NextOnTop logo"><h3>NextOnTop</h3></a>
+      <div class="row">
+        <div class="col-sm-2">
+          <a class="navbar-brand" href="/home"> <img src="https://www.nextontop.com/assets/paper_img/logo.png" height="42"
+              width="48" alt="Image of NextOnTop logo">
+          </a>
+        </div>
+        <div class="col-sm">
+          <a href="/home">
+            <h3>NextOnTop</h3>
+          </a>
+        </div>
+      </div> 
     </div>
-
-    <!-- <ul style="list-style: none" class="nav navbar-nav navbar-right">
-      <li><a href="#/services"> Services</a></li>
-      <li><a href="#/products"> Products</a></li>
-      <li><a href="#/portfolio"> Portfolio</a></li>
-      <li><a href="#/process"> Process</a></li>
-      <li><a href="#/blogs"> Blogs</a></li>
+    <!-- <ul class="nav navbar-nav navbar-right">
+      <li><a href="#/services"> SERVICES</a></li>
+      <li><a href="#/products"> PRODUCTS</a></li>
+      <li><a href="#/portfolio"> PORTFOLIO</a></li>
+      <li><a href="#/process"> PROCESS</a></li>
+      <li><a href="#/blogs"> BLOGS</a></li>
       <li> <button class="btn btn-warning navbar-btn">HIRE US</button> </li>
     </ul> -->
+    
+      <nav class="topnav navbar-right">
+        <a href="#services">SERVICES</a>
+        <a href="#products">PRODUCTS</a>
+        <a href="#portfolio">PORTFOLIO</a>
+        <a href="#process">PROCESS</a>
+        <a href="#/blogs"> BLOGS</a>
+        <button class="btn btn-warning navbar-btn">HIRE US</button>
+      </nav>
+    
   </div>
+ 
 </nav>
