--- a/src/app/team/team.component.css
+++ b/src/app/team/team.component.css
@@ -49,13 +49,26 @@ img {
 }
 
 h2 {
+    font-size: 3em;
     font-weight: 400;
     margin-top: 30px;
     margin-right: 0px;
     margin-bottom: 15px;
     margin-left: 0px;
+    padding: 5px;
     font-family: 'Montserrat', "Helvetica", Arial, sans-serif;
-    color: #272222;
+    color: rgb(110, 105, 105);
+}
+
+p {
+    color: #9A9A9A;
+    font-size: 120%;
+    line-height: 1.4;
+    margin-top: 20px;
+    margin-right: 0px;
+    margin-bottom: 10px;
+    margin-left: 0px;
+
 }
 
 .col-sm-8 {
