This commit creates the router for blog path

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
 <div class="wrapper">
   <app-nav-bar></app-nav-bar>
-  <app-home-slide></app-home-slide>
-  <app-team></app-team>
+<router-outlet></router-outlet>
 </div>
-  
