--- a/src/app/blogs/blogs.component.html
+++ b/src/app/blogs/blogs.component.html
@@ -1,7 +1,2 @@
-<div class="demo-header demo-header-image">
-  <div class="innovators">
-    <h1 class="title-uppercase">Blog</h1>
-    <h3>The Innovators Arena</h3>
-  </div>
-
-</div>
+<h2>Blogs</h2>
+<p>Our blogs will be up soon</p>
