--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -3,12 +3,12 @@
     <div class="navbar-header">
       <div class="row">
         <div class="col-sm-2">
-          <a class="navbar-brand" href="/home"> <img src="https://www.nextontop.com/assets/paper_img/logo.png" height="42"
+          <a class="navbar-brand" href=""> <img src="https://www.nextontop.com/assets/paper_img/logo.png" height="42"
               width="48" alt="Image of NextOnTop logo">
           </a>
         </div>
         <div class="col-sm">
-          <a href="/home">
+          <a href="">
             <h3>NextOnTop</h3>
           </a>
         </div>
@@ -19,7 +19,7 @@
       <a href="#products">PRODUCTS</a>
       <a href="#portfolio">PORTFOLIO</a>
       <a href="#process">PROCESS</a>
-      <a href="#/blogs"> BLOGS</a>
+      <a [routerLink]="[ '/blogs' ]">BLOGS</a>
       <button class="btn btn-warning navbar-btn">HIRE US</button>
     </nav>
   </div>
