--- a/src/app/blogs/blogs.component.html
+++ b/src/app/blogs/blogs.component.html
@@ -1,5 +1,19 @@
-<h2>Blogs</h2>
-
-<div *ngFor="let blog of blogs" >
-    <h3> {{blog.title}} by {{blog.name}} </h3>
+<div class="wrapper">
+    <div class="container">
+        <div class="demo-header demo-header-image">
+            <div class="arena">
+                <h1 class="title-uppercase">Blogs</h1>
+                <h3>The innovator's arena</h3>
+            </div>
+        </div>
+    </div>
+    <div class="container blogs">
+        <div *ngFor="let blog of blogs" (click)="goToDetailPage(blog)" >
+            <hr>
+            <h3> {{blog.title}} </h3>
+            <p> {{blog.description}} </p>
+            by {{blog.name}}
+        </div>
+    </div>
 </div>
+
