This commit fixes line height to show preview of blog at main blog menu

--- a/src/app/blog-detail/blog-detail.component.html
+++ b/src/app/blog-detail/blog-detail.component.html
@@ -1,1 +1,5 @@
-<h3>This blog's id is {{blogId}} </h3>
+<div class="container">
+    <h3> {{blogToDisplay.title}} </h3>
+    <p> posted by {{blogToDisplay.name}} </p>
+    <h4> {{blogToDisplay.description}} </h4>
+</div>
