--- a/src/app/blogs/blogs.component.css
+++ b/src/app/blogs/blogs.component.css
@@ -3,3 +3,13 @@ p {
     line-height: 48px; /* Height / no. of lines to display */
     overflow:hidden;
 }
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  background-color: #f5f5f5;
+  padding: 15px;
+  text-align: center;
+}
