--- a/src/app/blogs/blogs.component.css
+++ b/src/app/blogs/blogs.component.css
@@ -1,15 +1,30 @@
 p {
-    height:60px;
-    line-height: 48px; /* Height / no. of lines to display */
     overflow:hidden;
 }
 
 .footer {
   position: fixed;
   bottom: 0;
-  width: 100%;
-  height: 60px;
+  width: 20%;
+  height: 50px;
   background-color: #f5f5f5;
   padding: 15px;
   text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-left: 30%;
+  text-shadow: 0 1px 0px #fff;
+  border-radius: 25px;
+  color: #FFFFFF;
+  background-color: #68B3C8;
+  opacity: 1;
+}
+
+h4 {
+  font-size: 16px;
+  color: #FFFFFF;
+  font-family: 'Montserrat', "Helvetica", Arial, sans-serif;
+}
+
+a {
+  color: #FFFFFF
 }
