Fixed compile error

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -3,8 +3,13 @@
     <div class="navbar-header">
       <div class="row">
         <div class="col-sm-2">
-          <a class="navbar-brand" href=""> <img src="https://www.nextontop.com/assets/paper_img/logo.png" height="42"
-              width="48" alt="Image of NextOnTop logo">
+          <a class="navbar-brand" href="">
+            <img
+              src="https://www.nextontop.com/assets/paper_img/logo.png"
+              height="42"
+              width="48"
+              alt="Image of NextOnTop logo"
+            />
           </a>
         </div>
         <div class="col-sm">
@@ -12,14 +17,14 @@
             <h3>NextOnTop</h3>
           </a>
         </div>
-      </div> 
+      </div>
     </div>
     <nav class="topnav navbar-right">
-      <a href="#services">SERVICES</a>
-      <a href="#products">PRODUCTS</a>
-      <a href="#portfolio">PORTFOLIO</a>
-      <a href="#process">PROCESS</a>
-      <a [routerLink]="[ '/blogs' ]">BLOGS</a>
+      <a [routerLink]="['/services']">SERVICES</a>
+      <a [routerLink]="['/products']">PRODUCTS</a>
+      <a [routerLink]="['/portfolio']">PORTFOLIO</a>
+      <a [routerLink]="['/process']">PROCESS</a>
+      <a [routerLink]="['/blogs']">BLOGS</a>
       <button class="btn btn-warning navbar-btn">HIRE US</button>
     </nav>
   </div>
