--- a/src/app/create-blog/create-blog.component.html
+++ b/src/app/create-blog/create-blog.component.html
@@ -1,33 +1,38 @@
-  <div class="container">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="panel-title">Add your own blog post to our site</h3>
-      </div>
-        
-        <div class="panel-body">
-          <div class="blogTitle">
-            <label>Blog Title:</label>
-            <br>
-            <input #newTitle>
-          </div>
-
-          <div class="userName">
-            <label>Your Name:</label>
-            <br>
-            <input #newName>
-          </div>
-          
-          <div class="description">
-            <label>Your Blog:</label>
-            <br>
-            <textarea #newDescription cols="75" rows="10"></textarea>
-          </div>
-          
-        </div>
-        <button class="btn btn-primary" 
-        (click)="submitForm(newTitle.value, newName.value, newDescription.value); 
-        newTitle.value=''; newName.value=''; newDescription.value=''">Add</button>
-
-      </div>
+<div class="container">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Add your own blog post to our site</h3>
     </div>
 
+    <div class="panel-body">
+      <div class="blogTitle">
+        <label>Blog Title:</label>
+        <br />
+        <input #newTitle />
+      </div>
+
+      <div class="userName">
+        <label>Your Name:</label>
+        <br />
+        <input #newName />
+      </div>
+
+      <div class="description">
+        <label>Your Blog:</label>
+        <br />
+        <textarea #newDescription cols="75" rows="10"></textarea>
+      </div>
+    </div>
+    <button
+      class="btn btn-primary"
+      (click)="
+        submitForm(newTitle.value, newName.value, newDescription.value);
+        newTitle.value = '';
+        newName.value = '';
+        newDescription.value = ''
+      "
+    >
+      Add
+    </button>
+  </div>
+</div>
