--- a/src/app/home-slide/home-slide.component.css
+++ b/src/app/home-slide/home-slide.component.css
@@ -1,72 +1,73 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:500,700");
 
 .demo-header-image {
-    background-image: url(https://www.nextontop.com/assets/paper_img/homebg.jpg);
-    background-color: #111010;
-    text-align: center;
+  background-image: url(https://www.nextontop.com/assets/paper_img/homebg.jpg);
+  background-color: #111010;
+  text-align: center;
 }
 
 .title-uppercase {
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
 
 h1 {
-    color: white;
-    line-height: 1.1;
-    font-size: 4.5em;
-    font-weight: 400;
-    margin-top: 30px;
-    margin-right: 0px;
-    margin-bottom: 15px;
-    margin-left: 0px;
-    font-family: 'Montserrat', "Helvetica", Arial, sans-serif;
+  color: white;
+  line-height: 1.1;
+  font-size: 4.5em;
+  font-weight: 400;
+  margin-top: 30px;
+  margin-right: 0px;
+  margin-bottom: 15px;
+  margin-left: 0px;
+  font-family: "Montserrat", "Helvetica", Arial, sans-serif;
 }
+
 h1 {
-    display: block;
-    margin-block-start: 0em;
-    margin-block-end: 0em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-top: 100px
+  display: block;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-top: 100px;
 }
 
 h3 {
-    margin-top: 35px;
-    color: white;
-    /* padding-bottom: 20px; */
-    font-family: 'Montserrat', "Helvetica", Arial, sans-serif;
+  margin-top: 35px;
+  color: white;
+  /* padding-bottom: 20px; */
+  font-family: "Montserrat", "Helvetica", Arial, sans-serif;
 }
 
 .btn-info.btn-fill {
-    color: #FFFFFF;
-    background-color: #68B3C8;
-    opacity: 1;
+  color: #ffffff;
+  background-color: #68b3c8;
+  opacity: 1;
 }
 
 .btn {
-    display: inline-block;
-    vertical-align: middle;
-    margin-top: 50px;
-    margin-bottom: 100px;
-    line-height: 1.5;
-    text-align: center;
-    vertical-align: middle;
-    border: 1px;
-    font-family: 'Montserrat', "Helvetica", Arial, sans-serif;
+  display: inline-block;
+  vertical-align: middle;
+  margin-top: 50px;
+  margin-bottom: 100px;
+  line-height: 1.5;
+  text-align: center;
+  vertical-align: middle;
+  border: 1px;
+  font-family: "Montserrat", "Helvetica", Arial, sans-serif;
 }
 
 .btn {
-    border-radius: 20px;
-    box-sizing: border-box;
-    border-width: 2px;
-    font-size: 16px;
-    font-weight: 500;
-    padding-top: 7px;
-    padding-right: 18px;
-    padding-bottom: 7px;
-    padding-left: 18px;
+  border-radius: 20px;
+  box-sizing: border-box;
+  border-width: 2px;
+  font-size: 16px;
+  font-weight: 500;
+  padding-top: 7px;
+  padding-right: 18px;
+  padding-bottom: 7px;
+  padding-left: 18px;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
